oxiplate/tests/crates/template-dir-file/tests/broken/broken.stderr
error: Template directory `$DIR/templates/external.html.oxip` was not a directory.
 --> tests/broken/broken.rs:4:1
  |
4 | #[oxiplate = "external.html.oxip"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
